--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
