--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
