--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "lodash.debounce": "^4.0.8",
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
+    "vue-axios": "^3.5.2",
     "vue-gtag": "^2.0.1",
     "vue-router": "^4.1.5"
   },
